Changing max screen width to stop colliding on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+@media (max-width: 680px) {
   .topbar-h3 {
     visibility: hidden;
   }
